# msquic

./: CMakeLists.txt
scripts/: LongRunRPS.json  RemoteTests.json  performance-helper.psm1  performance.ps1
src/core/: connection.c  send.c
src/inc/: msquic.h
src/perf/lib/: quicmain.cpp
src/platform/: datapath_winkernel.c
src/tools/: CMakeLists.txt
src/tools/etw/: CMakeLists.txt
src/tools/etwlib/: CMakeLists.txt
